[gd_scene load_steps=2 format=3 uid="uid://0fwf3jddt1dn"]

[ext_resource type="Script" uid="uid://72q04s63kfp3" path="res://src/options_menu.gd" id="1"]

[node name="OptionsPanel" type="Panel"]
visible = false
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.8
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TextSizeHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/h_separation = 12

[node name="TextSizeLabel" type="Label" parent="VBox/TextSizeHBox"]
layout_mode = 2
text = "Text Size"

[node name="TextSizeSpin" type="SpinBox" parent="VBox/TextSizeHBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 36)
min_value = 8.0
max_value = 48.0
value = 16.0

[node name="ThemeHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/h_separation = 12

[node name="ThemeLabel" type="Label" parent="VBox/ThemeHBox"]
layout_mode = 2
text = "Theme"

[node name="ThemeDrop" type="OptionButton" parent="VBox/ThemeHBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 36)

[node name="BgHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/h_separation = 12

[node name="BgLabel" type="Label" parent="VBox/BgHBox"]
layout_mode = 2
text = "Background"

[node name="BgColorPicker" type="ColorPickerButton" parent="VBox/BgHBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 40)

[node name="PasswordHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/h_separation = 12

[node name="PasswordLabel" type="Label" parent="VBox/PasswordHBox"]
layout_mode = 2
text = "Passwords"

[node name="CensorPasswordsCheck" type="CheckBox" parent="VBox/PasswordHBox"]
layout_mode = 2
text = "Censor passwords"
button_pressed = true
custom_minimum_size = Vector2(0, 40)

[node name="ServerHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/h_separation = 12

[node name="ServerLabel" type="Label" parent="VBox/ServerHBox"]
layout_mode = 2
text = "Server"

[node name="HostEdit" type="LineEdit" parent="VBox/ServerHBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 36)
placeholder_text = "127.0.0.1"

[node name="PortSpin" type="SpinBox" parent="VBox/ServerHBox"]
layout_mode = 2
custom_minimum_size = Vector2(80, 36)
min_value = 1.0
max_value = 65535.0
value = 5000.0
custom_arrow_step = 1.0

[node name="ConnectionHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/h_separation = 12

[node name="ConnectionLabel" type="Label" parent="VBox/ConnectionHBox"]
layout_mode = 2
text = "Connection"

[node name="AutoReconnectCheck" type="CheckBox" parent="VBox/ConnectionHBox"]
layout_mode = 2
text = "Auto reconnect"
button_pressed = false
custom_minimum_size = Vector2(0, 40)

[node name="ReconnectNow" type="Button" parent="VBox/ConnectionHBox"]
layout_mode = 2
text = "Reconnect now"
custom_minimum_size = Vector2(0, 40)

[node name="ButtonsHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 2
theme_override_constants/h_separation = 12

[node name="ApplyButton" type="Button" parent="VBox/ButtonsHBox"]
layout_mode = 2
text = "Apply"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 44)

[node name="CloseButton" type="Button" parent="VBox/ButtonsHBox"]
layout_mode = 2
text = "Close"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 44)
